<resources>
    <string name="app_name">WiFi Storage</string>
    <string name="about_copy">Copyright (c) 2015 by Damian Stępniewski</string>
    <string name="service_name">Service</string>
    <string name="loading">Loading</string>
    <string name="localIp">Local IP</string>
    <string name="localIpDesc">Your device\'s address in your local network.</string>
    <string name="publicIp">Public IP</string>
    <string name="publicIpDesc">Your public address. Tap to refresh.</string>
    <string name="settings">SETTINGS</string>
    <string name="advanced">ADVANCED</string>
    <string name="details">SERVER DETAILS</string>
    <string name="port_name">Port</string>
    <string name="port_desc">Number ranging from 0 to 65535.</string>
    <string name="publicIp_name">Access from external network</string>
    <string name="publicIp_desc">Enables access from networks other than your local one (anywhere in the world). This option requires port forwarding set up in your router settings.</string>
    <string name="password_name">Password</string>
    <string name="password_desc">Password used to access the file server.</string>
    <string name="server_start">Server is</string>
    <string name="offline">offline.</string>
    <string name="online">online.</string>
    <string name="server_status_launch">Tap to launch.</string>
    <string name="server_status_type">Navigate to</string>
    <string name="server_status_browser"> in your browser. Tap to turn off.</string>
    <string name="or"> or </string>
    <string name="password">PASSWORD</string>
    <string name="incorrectPassword">Incorrect password</string>
    <string name="logIn">LOG IN</string>
    <string name="readOnly">This directory is in read-only mode.</string>
    <string name="powerOptions">Shut down/Restart</string>
    <string name="logOut">Log out</string>
    <string name="size">Size:</string>
    <string name="lastModified">Last modified:</string>
    <string name="type">Type:</string>
    <string name="uploading">Uploading</string>
    <string name="previewUnavailable">Preview unavailable</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="root_name">Root</string>
    <string name="root_desc">Tap to grant root permission</string>
    <string name="error_video_not_supported">Your browser does not support HTML 5 video.</string>
    <string name="error_audio_not_supported">Your browser does not support HTML 5 audio.</string>
    <string name="error_no_wifi">This app requires an active wifi connection.</string>
    <string name="stop">Stop</string>
</resources>
