<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeStart"
            android:layout_margin="20dp">
            <TextView
                android:id="@+id/startDesc"
                android:text="@string/server_status_launch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeDetails"
            android:layout_below="@id/relativeStart">
            <TextView
                android:id="@+id/textViewDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textSize="17sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/line1"
            android:background="@xml/whiteline"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/relativeDetails"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeIpLocal"
            android:layout_margin="20dp"
            android:layout_below="@id/line1">
            <TextView
                android:id="@+id/localIpDesc"
                android:text="@string/localIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginRight="50dp"
                android:layout_marginEnd="50dp"
                />
            <TextView
                android:text="@string/localIpDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/localIpDesc"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/tvLocalIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text=""
                android:textSize="15sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeSettings"
            android:layout_below="@id/relativeIpLocal"
            android:clickable="true">
            <TextView
                android:id="@+id/textViewSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textSize="17sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/line3"
            android:background="@xml/whiteline"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/relativeSettings"/>
        <RelativeLayout
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativePort"
            android:layout_margin="20dp"
            android:layout_below="@id/line3">
            <TextView
                android:id="@+id/portName"
                android:text="@string/port_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                />
            <TextView
                android:text="@string/port_desc"
                android:layout_marginRight="50dp"
                android:layout_marginEnd="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/portName"
                android:textSize="12sp"
                />
            <EditText
                android:id="@+id/etPort"
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:inputType="number"
                android:imeOptions="actionDone"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/line4"
            android:background="@xml/darkline"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/relativePort"/>
        <RelativeLayout
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativePassword"
            android:layout_margin="20dp"
            android:layout_below="@id/line4">
            <TextView
                android:id="@+id/passwordName"
                android:text="@string/password_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                />
            <TextView
                android:text="@string/password_desc"
                android:layout_marginRight="120dp"
                android:layout_marginEnd="120dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordName"
                android:textSize="12sp"
                />
            <EditText
                android:id="@+id/etPassword"
                android:layout_height="wrap_content"
                android:layout_width="100dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>